<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true"
  android:overScrollMode="never"
  tools:background="@color/colorBackground"
  tools:theme="@style/AppTheme"
  >

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    >

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?android:windowBackground"
      android:elevation="@dimen/elevationNormal"
      app:contentInsetStartWithNavigation="0dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:navigationIcon="@drawable/ic_arrow_back"
      app:title="@string/textBackupAndRestore"
      />

    <ImageView
      android:id="@+id/phoneIcon"
      android:layout_width="80dp"
      android:layout_height="0dp"
      android:padding="3dp"
      app:layout_constraintBottom_toBottomOf="@id/arrowIcon"
      app:layout_constraintEnd_toStartOf="@id/arrowIcon"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/arrowIcon"
      app:srcCompat="@drawable/ic_phone"
      app:tint="?android:attr/textColorPrimary"
      />

    <ImageView
      android:id="@+id/arrowIcon"
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:layout_marginTop="@dimen/backupTopMargin"
      android:padding="18dp"
      app:layout_constraintBottom_toTopOf="@id/titleText"
      app:layout_constraintEnd_toStartOf="@id/cloudIcon"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toEndOf="@id/phoneIcon"
      app:layout_constraintTop_toBottomOf="@id/toolbar"
      app:layout_constraintVertical_bias="0.1"
      app:layout_constraintVertical_chainStyle="packed"
      app:srcCompat="@drawable/ic_arrow_right"
      app:tint="?android:attr/textColorPrimary"
      />

    <ImageView
      android:id="@+id/cloudIcon"
      android:layout_width="74dp"
      android:layout_height="0dp"
      android:layout_marginStart="@dimen/spaceSmall"
      android:padding="6dp"
      app:layout_constraintBottom_toBottomOf="@id/arrowIcon"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toEndOf="@id/arrowIcon"
      app:layout_constraintTop_toTopOf="@id/arrowIcon"
      app:srcCompat="@drawable/ic_cloud"
      app:tint="?android:attr/textColorPrimary"
      />

    <TextView
      android:id="@+id/titleText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spaceBig"
      android:layout_marginBottom="@dimen/spaceTiny"
      android:text="@string/textCloudBackupTitle"
      android:textAllCaps="true"
      android:textColor="?android:attr/textColorPrimary"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@id/descriptionText"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/arrowIcon"
      />

    <TextView
      android:id="@+id/descriptionText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/spaceHuge"
      android:layout_marginTop="@dimen/spaceSmall"
      android:layout_marginEnd="@dimen/spaceHuge"
      android:gravity="center"
      android:text="@string/textCloudBackupDescription"
      android:textColor="?android:attr/textColorSecondary"
      android:textSize="14sp"
      app:layout_constraintBottom_toTopOf="@id/timestampText"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/titleText"
      />

    <TextView
      android:id="@+id/timestampText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spaceNormal"
      android:background="@drawable/bg_pill"
      android:paddingHorizontal="@dimen/spaceNormal"
      android:paddingVertical="4dp"
      android:textColor="@color/colorWhite"
      android:textSize="11sp"
      app:layout_constraintBottom_toTopOf="@id/connectButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/descriptionText"
      tools:text="Last backup: 2 mins ago"
      />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/connectButton"
      style="@style/RoundMaterialButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spaceBig"
      android:minWidth="200dp"
      android:text="@string/textCloudBackupConnect"
      android:textColor="?attr/textColorOnSurface"
      app:backgroundTint="?attr/colorAccent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/timestampText"
      app:rippleColor="?android:attr/textColorPrimary"
      />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/backupButton"
      style="@style/RoundMaterialButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spaceBig"
      android:minWidth="200dp"
      android:text="@string/textCloudBackupNow"
      android:textColor="?attr/textColorOnSurface"
      android:visibility="gone"
      app:backgroundTint="?attr/colorAccent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/timestampText"
      app:rippleColor="?android:attr/textColorPrimary"
      tools:visibility="visible"
      />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/restoreButton"
      style="@style/RoundTextButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spaceSmall"
      android:minWidth="200dp"
      android:text="@string/textCloudBackupRestore"
      android:textColor="?android:attr/textColorPrimary"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/backupButton"
      tools:visibility="visible"
      />

    <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:foregroundTint="?attr/colorAccent"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="@id/backupButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/backupButton"
      tools:visibility="invisible"
      />

    <TextView
      android:id="@+id/statusText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/spaceBig"
      android:layout_marginTop="@dimen/spaceBig"
      android:layout_marginEnd="@dimen/spaceBig"
      android:layout_marginBottom="@dimen/spaceBig"
      android:gravity="center"
      android:textColor="?android:attr/textColorSecondary"
      android:textSize="12sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/restoreButton"
      app:layout_constraintVertical_bias="0"
      tools:text="Restoring 45 of 233"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
